--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-card-4">
         <div class="w3-display-container">
           <!--<img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">-->
-          <img src="http://www.cs.toronto.edu/~eleni/imgs/eleni_pic.jpg" style="width:100%" alt="Avatar">
+          <img src="imgs/eleni_pic.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <!--<h2>Eleni Triantafillou</h2>-->
           </div>
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>[etriantafillou at google dot com]</p>
           
-          <p><i class="fa fa-file-pdf-o fa-fw w3-margin-right w3-large"></i><a href="http://www.cs.toronto.edu/~eleni/cv.pdf">CV (last updated 2021)</a></p>
+          <p><i class="fa fa-file-pdf-o fa-fw w3-margin-right w3-large"></i><a href="cv.pdf">CV (last updated 2021)</a></p>
 
 	<p><i class="fa fa-github fa-fw w3-margin-right w3-large" aria-hidden="true"></i><a href=https://github.com/eleniTriantafillou>Github</a>
 	</p>          
@@ -112,12 +112,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 	<h2 class="w3-padding-16">News</h2>
 	<p>
+  <li>The slides for my keynote at CoLLAs'24 titled "Are we making progress in unlearning?" are <a href="collas24slides.pdf">[here]</a>.
 	<li>The recording and slides of our CVPR'24 tutorial on unlearning are now available <a href=https://cvpr.thecvf.com/virtual/2024/tutorial/23724>[here]</a>. </li>
-	<li>We released a <a href=https://arxiv.org/abs/2406.09073>[preprint]</a> describing the setup and findings from the first NeurIPS unlearning competition. </li>
-	<li>We released a <a href=https://arxiv.org/abs/2406.01257>[preprint]</a> on identifying interpretable factors affecting difficulty of unlearning and leveraging them to improve unlearning pipelines. </li>
+	<li>We released a <a href=https://arxiv.org/abs/2406.09073>[preprint]</a> describing the metric and findings from the first NeurIPS unlearning competition. </li>
 	<li>I co-led the organization of the first NeurIPS competition on unlearning <a href=https://unlearning-challenge.github.io/>[website]</a>, hosted at NeurIPS'23. </li>
-	<li>Our paper "In Search for a Generalizable Method for Source Free Domain Adaptation" was accepted to ICML 2023 <a href=https://arxiv.org/abs/2302.06658>[paper]</a> <a href=https://ai.googleblog.com/2023/07/in-search-of-generalizable-method-for.html>[blog post]</a>. </li>
-	<li>Our paper "Towards Unbounded Machine Unlearning" <a href=https://arxiv.org/abs/2302.09880>[paper]</a> was accepted to NeurIPS 2023.</li>
 	<li>The recording of my NeurIPS tutorial about the role of meta-learning in few-shot learning is now available <a href= at NeurIPS 2022 about the role of meta-learning in few-shot learning.<>here</a>.</li>
 	<li>I am co-organizing the NeurIPS 2022 <a href=https://meta-learn.github.io/2022/>workshop</a> on meta-learning.</li>
 	<li>I gave an <a href=https://slideslive.com/38969407/on-the-role-of-metalearning-for-fewshot-classification?ref=recommended>invited talk</a> at the NeurIPS 2021 workshop on meta-learning.</li>
@@ -195,7 +193,21 @@ with Temporally Extended Goals: LTL over finite and infinite traces.</strong><br
       <div class="w3-container w3-card-2 w3-white">
         <h2 class="w3-padding-16">Workshop papers and preprints</h2>
 
-	<p><br />
+  <!-- <p><br /> -->
+    <strong>Are we making progress in unlearning? Findings from the first NeurIPS unlearning competition. </strong> <br />
+    <strong>Eleni Triantafillou</strong>, Peter Kairouz, Fabian Pedregosa, Jamie Hayes, Meghdad Kurmanji, Kairan Zhao, Vincent Dumoulin, Julio Jacques Junior,
+    Ioannis Mitliagkas, Jun Wan, Lisheng Sun Hosoya, Sergio Escalera,
+    Gintare Karolina Dziugaite, Peter Triantafillou, Isabelle Guyon. 2024. <a href=https://arxiv.org/abs/2406.09073>[paper]</a>.	
+    </p>
+
+
+  <p><br />
+    <strong>What makes unlearning hard and what to do about it</strong> <br />
+    Kairan Zhao, Meghdad Kurmanji, George-Octavian Barbulescu, <strong>Eleni Triantafillou*</strong>, Peter Triantafillou*. 2024. <a href=https://arxiv.org/abs/2406.01257>[paper]</a>.	
+    </p>
+  
+  
+  <p><br />
 	<strong>Inexact Unlearning Needs More Careful Evaluations to Avoid a False Sense of Privacy</strong> <br />
 	Jamie Hayes, Ilia Shumailov, <strong>Eleni Triantafillou</strong>, Amr Khalifa and Nicolas Papernot. 2024. <a href=https://arxiv.org/abs/2403.01218>[paper]</a>.	
 	</p>
