--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p> 
 	  <h2>Eleni Triantafillou</h2>
 	  Research Scientist at Google DeepMind. <br />
-	  Ph.D from the <a href="https://www.utoronto.ca/">University of Toronto</a> (2021), advised by <a href="http://www.cs.toronto.edu/~urtasun">Raquel Urtasun</a> and <a href="http://www.cs.toronto.edu/~zemel">Richard Zemel</a> <br /> 
+	  PhD from the <a href="https://www.utoronto.ca/">University of Toronto</a> (2021), advised by <a href="http://www.cs.toronto.edu/~urtasun">Raquel Urtasun</a> and <a href="http://www.cs.toronto.edu/~zemel">Richard Zemel</a> <br /> 
           </p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>[etriantafillou at google dot com]</p>
           
@@ -112,9 +112,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 	<h2 class="w3-padding-16">News</h2>
 	<p>
-  <li>The slides for my keynote at CoLLAs'24 titled "Are we making progress in unlearning?" are <a href="collas24slides.pdf">[here]</a>.
+  <li>The slides for my keynote at CoLLAs'24 titled "<strong>Are we making progress in machine unlearning?</strong>" are <a href="collas24slides.pdf">[here]</a>.
 	<li>The recording and slides of our CVPR'24 tutorial on unlearning are now available <a href=https://cvpr.thecvf.com/virtual/2024/tutorial/23724>[here]</a>. </li>
-	<li>We released a <a href=https://arxiv.org/abs/2406.09073>[preprint]</a> describing the metric and findings from the first NeurIPS unlearning competition. </li>
+	<li>We released a <a href=https://arxiv.org/abs/2406.09073>preprint</a> describing the metric and findings from the first NeurIPS unlearning competition. </li>
 	<li>I co-led the organization of the first NeurIPS competition on unlearning <a href=https://unlearning-challenge.github.io/>[website]</a>, hosted at NeurIPS'23. </li>
 	<li>The recording of my NeurIPS tutorial about the role of meta-learning in few-shot learning is now available <a href= at NeurIPS 2022 about the role of meta-learning in few-shot learning.<>here</a>.</li>
 	<li>I am co-organizing the NeurIPS 2022 <a href=https://meta-learn.github.io/2022/>workshop</a> on meta-learning.</li>
@@ -122,7 +122,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 	<li>I defended my PhD thesis in the summer of 2021 and have started working as a Research Scientist in Google Brain, based in London UK.</li>
 	</p>
 
-        <h2 class="w3-padding-16">About me</h2>
+  <h2 class="w3-padding-16">About me</h2>
 	<p>
 
 
@@ -193,7 +193,6 @@ with Temporally Extended Goals: LTL over finite and infinite traces.</strong><br
       <div class="w3-container w3-card-2 w3-white">
         <h2 class="w3-padding-16">Workshop papers and preprints</h2>
 
-  <!-- <p><br /> -->
     <strong>Are we making progress in unlearning? Findings from the first NeurIPS unlearning competition. </strong> <br />
     <strong>Eleni Triantafillou</strong>, Peter Kairouz, Fabian Pedregosa, Jamie Hayes, Meghdad Kurmanji, Kairan Zhao, Vincent Dumoulin, Julio Jacques Junior,
     Ioannis Mitliagkas, Jun Wan, Lisheng Sun Hosoya, Sergio Escalera,
@@ -309,6 +308,8 @@ A. McIlraith. <br />In Proceedings of HSDIP, ICAPS, 2016, pages 68-76.
 	  <li>Reviewer for TMLR: 2022 onwards</li>
 	  <li>Program committee member for workshops: S2D-OLAD at ICLR 2021, Meta-Learning at NeurIPS: 2020 (senior reviewer), 2018 and 2017, AMTL at ICML 2019, LLD at ICLR 2019, LLD at NeurIPS 2017, WiML at NeurIPS 2017, WiCV at CVPR 2018 and 2021</li>
 	</ul>
+
+  <br />
       </div>
 
 
