--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 	<h2 class="w3-padding-16">News</h2>
 	<p>
-  <li>The slides for my keynote at CoLLAs'24 titled "<strong>Are we making progress in machine unlearning?</strong>" are <a href="collas24slides.pdf">[here]</a>.
-	<li>The recording and slides of our CVPR'24 tutorial on unlearning are now available <a href=https://cvpr.thecvf.com/virtual/2024/tutorial/23724>[here]</a>. </li>
+  <li>I gave a keynote at CoLLAs'24 titled "<strong>Are we making progress in machine unlearning?</strong>" <a href="collas24slides.pdf">[slides]</a>.
+	<li>The recording and slides of our CVPR'24 tutorial on unlearning are now available <a href=https://cvpr.thecvf.com/virtual/2024/tutorial/23724>here</a>. </li>
 	<li>We released a <a href=https://arxiv.org/abs/2406.09073>preprint</a> describing the metric and findings from the first NeurIPS unlearning competition. </li>
 	<li>I co-led the organization of the first NeurIPS competition on unlearning <a href=https://unlearning-challenge.github.io/>[website]</a>, hosted at NeurIPS'23. </li>
-	<li>The recording of my NeurIPS tutorial about the role of meta-learning in few-shot learning is now available <a href= at NeurIPS 2022 about the role of meta-learning in few-shot learning.<>here</a>.</li>
+	<li>The <a href=https://neurips.cc/virtual/2022/tutorial/55814>recording</a> of my NeurIPS 2022 tutorial about the role of meta-learning in few-shot learning is now available.</li>
 	<li>I am co-organizing the NeurIPS 2022 <a href=https://meta-learn.github.io/2022/>workshop</a> on meta-learning.</li>
 	<li>I gave an <a href=https://slideslive.com/38969407/on-the-role-of-metalearning-for-fewshot-classification?ref=recommended>invited talk</a> at the NeurIPS 2021 workshop on meta-learning.</li>
 	<li>I defended my PhD thesis in the summer of 2021 and have started working as a Research Scientist in Google Brain, based in London UK.</li>
