--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
+<meta name="google-site-verification" content="sS69phXrJ24PUfp6QE_852uB3SzCJD24yxxpUs4An38" />
 <body class="w3-light-grey">
 
 <!-- Page Container -->
