--- a/index.html
+++ b/index.html
@@ -145,7 +145,13 @@ In my free time, I enjoy <a href="https://www.instagram.com/glutenfreegrainoftru
         <!--<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>-->
         <h2 class="w3-padding-16">Conference publications</h2>
 
-	<p><br />
+  <p><br />
+    <strong>What makes unlearning hard and what to do about it</strong> <br />
+    Kairan Zhao, Meghdad Kurmanji, George-Octavian Barbulescu, <strong>Eleni Triantafillou*</strong>, Peter Triantafillou*. NeurIPS 2024. <a href=https://arxiv.org/abs/2406.01257>[paper]</a>.
+    </p>
+  
+  
+  <p><br />
 	<strong>Machine Unlearning in Learned Databases: An Experimental Analysis</strong> <br />
 	Meghdad Kurmanji, <strong>Eleni Triantafillou</strong>, Peter Triantafillou. SIGMOD 2024. <a href=https://dl.acm.org/doi/pdf/10.1145/3639304>[paper]</a>.
 	</p>
@@ -194,16 +200,16 @@ with Temporally Extended Goals: LTL over finite and infinite traces.</strong><br
       <div class="w3-container w3-card-2 w3-white">
         <h2 class="w3-padding-16">Workshop papers and preprints</h2>
 
+    <p><br />
+      <strong>Improved Localized Unlearning through the Lens of Memorization</strong> <br />
+      Reihaneh Torkzadehmahani, Reza Nasirigerdeh, Georgios Kaissis, Daniel Rueckert, Gintare Karolina Dziugaite, <strong>Eleni Triantafillou</strong>. 2024. <a href=https://arxiv.org/abs/2412.02432>[paper]</a>.	
+      </p>
+
+
     <strong>Are we making progress in unlearning? Findings from the first NeurIPS unlearning competition. </strong> <br />
     <strong>Eleni Triantafillou</strong>, Peter Kairouz, Fabian Pedregosa, Jamie Hayes, Meghdad Kurmanji, Kairan Zhao, Vincent Dumoulin, Julio Jacques Junior,
     Ioannis Mitliagkas, Jun Wan, Lisheng Sun Hosoya, Sergio Escalera,
     Gintare Karolina Dziugaite, Peter Triantafillou, Isabelle Guyon. 2024. <a href=https://arxiv.org/abs/2406.09073>[paper]</a>.	
-    </p>
-
-
-  <p><br />
-    <strong>What makes unlearning hard and what to do about it</strong> <br />
-    Kairan Zhao, Meghdad Kurmanji, George-Octavian Barbulescu, <strong>Eleni Triantafillou*</strong>, Peter Triantafillou*. 2024. <a href=https://arxiv.org/abs/2406.01257>[paper]</a>.	
     </p>
   
   
