--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>London, UK</p>-->
           <p> 
 	  <h2>Eleni Triantafillou</h2>
-	  Research Scientist at Google DeepMind. <br />
+	  Senior Research Scientist at Google DeepMind. <br />
 	  PhD from the <a href="https://www.utoronto.ca/">University of Toronto</a> (2021), advised by <a href="http://www.cs.toronto.edu/~urtasun">Raquel Urtasun</a> and <a href="http://www.cs.toronto.edu/~zemel">Richard Zemel</a> <br /> 
           </p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>[etriantafillou at google dot com]</p>
@@ -129,7 +129,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 	<p>
 
-I'm a research scientist at Google DeepMind, based in London UK. My main research interest is around creating methods that allow efficient and effective adaptation of deep neural networks to cope with distribution shifts, rapidly learning new tasks, and supporting efficient unlearning of data points. My research falls in the areas of few-shot learning, meta-learning, domain adaptation and machine unlearning.
+I'm a senior research scientist at Google DeepMind, based in London UK. My main research interest is around creating methods that allow efficient and effective adaptation of deep neural networks to cope with distribution shifts, rapidly learning new tasks, and supporting efficient unlearning of data points. My research falls in the areas of few-shot learning, meta-learning, domain adaptation and machine unlearning.
 
 <hr>
 In my free time, I enjoy <a href="https://www.instagram.com/glutenfreegrainoftruth/">food blogging</a>, dance (especially hip hop and commercial), piano playing, singing and <a href="https://www.youtube.com/watch?v=BahVLIYkpLE">song writing</a>.<br>
@@ -201,11 +201,12 @@ with Temporally Extended Goals: LTL over finite and infinite traces.</strong><br
         <h2 class="w3-padding-16">Workshop papers and preprints</h2>
 
     <p><br />
-      <strong>Improved Localized Unlearning through the Lens of Memorization</strong> <br />
-      Reihaneh Torkzadehmahani, Reza Nasirigerdeh, Georgios Kaissis, Daniel Rueckert, Gintare Karolina Dziugaite, <strong>Eleni Triantafillou</strong>. 2024. <a href=https://arxiv.org/abs/2412.02432>[paper]</a>.	
-      </p>
+    <strong>Improved Localized Unlearning through the Lens of Memorization</strong> <br />
+    Reihaneh Torkzadehmahani, Reza Nasirigerdeh, Georgios Kaissis, Daniel Rueckert, Gintare Karolina Dziugaite, <strong>Eleni Triantafillou</strong>. 2024. <a href=https://arxiv.org/abs/2412.02432>[paper]</a>.	
+    </p>
 
 
+    <p><br />
     <strong>Are we making progress in unlearning? Findings from the first NeurIPS unlearning competition. </strong> <br />
     <strong>Eleni Triantafillou</strong>, Peter Kairouz, Fabian Pedregosa, Jamie Hayes, Meghdad Kurmanji, Kairan Zhao, Vincent Dumoulin, Julio Jacques Junior,
     Ioannis Mitliagkas, Jun Wan, Lisheng Sun Hosoya, Sergio Escalera,
