--- a/index.html
+++ b/index.html
@@ -143,7 +143,14 @@ In my free time, I enjoy <a href="https://www.instagram.com/glutenfreegrainoftru
 
       <div class="w3-container w3-card-2 w3-white">
         <!--<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>-->
-        <h2 class="w3-padding-16">Conference publications</h2>
+        <h2 class="w3-padding-16">Selected publications</h2>
+
+
+  <p><br />
+    <strong>Inexact Unlearning Needs More Careful Evaluations to Avoid a False Sense of Privacy</strong> <br />
+    Jamie Hayes, Ilia Shumailov, <strong>Eleni Triantafillou</strong>, Amr Khalifa and Nicolas Papernot. SaTML 2025. <a href=https://arxiv.org/abs/2403.01218>[paper]</a>.	
+    </p>
+
 
   <p><br />
     <strong>What makes unlearning hard and what to do about it</strong> <br />
@@ -198,7 +205,7 @@ with Temporally Extended Goals: LTL over finite and infinite traces.</strong><br
 
 
       <div class="w3-container w3-card-2 w3-white">
-        <h2 class="w3-padding-16">Workshop papers and preprints</h2>
+        <h2 class="w3-padding-16">Selected preprints and workshop papers</h2>
 
     <p><br />
     <strong>Improved Localized Unlearning through the Lens of Memorization</strong> <br />
@@ -213,11 +220,6 @@ with Temporally Extended Goals: LTL over finite and infinite traces.</strong><br
     Gintare Karolina Dziugaite, Peter Triantafillou, Isabelle Guyon. 2024. <a href=https://arxiv.org/abs/2406.09073>[paper]</a>.	
     </p>
   
-  
-  <p><br />
-	<strong>Inexact Unlearning Needs More Careful Evaluations to Avoid a False Sense of Privacy</strong> <br />
-	Jamie Hayes, Ilia Shumailov, <strong>Eleni Triantafillou</strong>, Amr Khalifa and Nicolas Papernot. 2024. <a href=https://arxiv.org/abs/2403.01218>[paper]</a>.	
-	</p>
 
 	<p><br />
 	<strong>Data Selection for Transfer Unlearning</strong> <br />
@@ -305,15 +307,16 @@ A. McIlraith. <br />In Proceedings of HSDIP, ICAPS, 2016, pages 68-76.
       <div class="w3-container w3-card-2 w3-white">
         <h2 class="w3-padding-16">Community Service</h2>
 	<ul>
-	  <li>Action Editor for TMLR.</li>
+	  <li>Associate Program Chair for CoLLAs 2025.</li>
+    <li>Action Editor for TMLR since 2024.</li>
 	  <li>Area chair for AutoML 2022 and 2023.</li>
-	  <li>Reviewer for NeurIPS: 2018 (top 10%), 2019, 2020 (top 10%), 2021 (top 8%), 2022.</li>
-	  <li>Reviewer for ICML: 2019 (top 5%), 2020, 2021 (expert reviewer), 2022.</li>
-	  <li>Reviewer for ICLR: 2019, 2020, 2021 (outstanding reviewer), 2022, 2023</li>
+	  <li>Reviewer for NeurIPS: 2018 (top 10%), 2019, 2020 (top 10%), 2021 (top 8%), 2022, 2023, 2024.</li>
+	  <li>Reviewer for ICML: 2019 (top 5%), 2020, 2021 (expert reviewer), 2022, 2023, 2024, 2025.</li>
+	  <li>Reviewer for ICLR: 2019, 2020, 2021 (outstanding reviewer), 2022, 2023 (notable reviewer), 2024 </li>
 	  <li>Reviewer for CVPR: 2021</li>
 	  <li>Reviewer for UAI: 2018</li>
 	  <li>Reviewer for IROS: 2021</li>
-	  <li>Reviewer for TMLR: 2022 onwards</li>
+	  <li>Reviewer for TMLR: 2022 onwards until 2024 (recognized as expert reviewer) </li>
 	  <li>Program committee member for workshops: S2D-OLAD at ICLR 2021, Meta-Learning at NeurIPS: 2020 (senior reviewer), 2018 and 2017, AMTL at ICML 2019, LLD at ICLR 2019, LLD at NeurIPS 2017, WiML at NeurIPS 2017, WiCV at CVPR 2018 and 2021</li>
 	</ul>
 
