--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>[etriantafillou at google dot com]</p>
           
-          <p><i class="fa fa-file-pdf-o fa-fw w3-margin-right w3-large"></i><a href="cv.pdf">CV (last updated 2021)</a></p>
+          <p><i class="fa fa-file-pdf-o fa-fw w3-margin-right w3-large"></i><a href="cv.pdf">CV</a></p>
 
 	<p><i class="fa fa-github fa-fw w3-margin-right w3-large" aria-hidden="true"></i><a href=https://github.com/eleniTriantafillou>Github</a>
 	</p>          
