--- a/index.html
+++ b/index.html
@@ -147,6 +147,24 @@ In my free time, I enjoy <a href="https://www.instagram.com/glutenfreegrainoftru
 
 
   <p><br />
+    <strong>From Dormant to Deleted: Tamper-Resistant Unlearning Through Weight-Space Regularization</strong> <br />
+    Shoaib Ahmed Siddiqui, Adrian Weller, David Krueger, Gintare Karolina Dziugaite, Michael Curtis Mozer, <strong>Eleni Triantafillou</strong>. NeurIPS 2025. <a href=https://arxiv.org/abs/2505.22310>[paper]</a>.	
+    </p>
+
+  <p><br />
+    <strong>Improved Localized Machine Unlearning Through the Lens of Memorization</strong> <br />
+    Reihaneh Torkzadehmahani, Reza Nasirigerdeh, Georgios Kaissis, Daniel Rueckert, Gintare Karolina Dziugaite, <strong>Eleni Triantafillou</strong>. TMLR 2025. <a href=https://arxiv.org/abs/2412.02432>[paper]</a>.	
+    </p>
+
+  
+  <p><br />
+    <strong>Selective Unlearning Via Representation Erasure Using Domain Adversarial Training</strong> <br />
+    Nazanin Mohammadi Sepahvand, <strong>Eleni Triantafillou</strong>, Hugo Larochelle, Doina Precup, James J. Clark, Daniel M. Roy, Gintare Karolina Dziugaite. ICLR 2025. <a href=https://openreview.net/pdf?id=KzSGJy1PIf>[paper]</a>.	
+    </p>
+
+
+
+  <p><br />
     <strong>Inexact Unlearning Needs More Careful Evaluations to Avoid a False Sense of Privacy</strong> <br />
     Jamie Hayes, Ilia Shumailov, <strong>Eleni Triantafillou</strong>, Amr Khalifa and Nicolas Papernot. SaTML 2025. <a href=https://arxiv.org/abs/2403.01218>[paper]</a>.	
     </p>
@@ -162,6 +180,7 @@ In my free time, I enjoy <a href="https://www.instagram.com/glutenfreegrainoftru
 	<strong>Machine Unlearning in Learned Databases: An Experimental Analysis</strong> <br />
 	Meghdad Kurmanji, <strong>Eleni Triantafillou</strong>, Peter Triantafillou. SIGMOD 2024. <a href=https://dl.acm.org/doi/pdf/10.1145/3639304>[paper]</a>.
 	</p>
+
 
 	<p><br />
 	<strong>Towards Unbounded Machine Unlearning</strong> <br />
@@ -208,8 +227,8 @@ with Temporally Extended Goals: LTL over finite and infinite traces.</strong><br
         <h2 class="w3-padding-16">Selected preprints and workshop papers</h2>
 
     <p><br />
-    <strong>Improved Localized Unlearning through the Lens of Memorization</strong> <br />
-    Reihaneh Torkzadehmahani, Reza Nasirigerdeh, Georgios Kaissis, Daniel Rueckert, Gintare Karolina Dziugaite, <strong>Eleni Triantafillou</strong>. 2024. <a href=https://arxiv.org/abs/2412.02432>[paper]</a>.	
+    <strong>Redirection for Erasing Memory (REM): Towards a universal unlearning method for corrupted data</strong> <br />
+    Stefan Schoepf, Michael Curtis Mozer, Nicole Elyse Mitchell, Alexandra Brintrup, Georgios Kaissis, Peter Kairouz, <strong>Eleni Triantafillou</strong>. 2025. <a href=https://arxiv.org/abs/2505.17730>[paper]</a>.	
     </p>
 
 
